--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
     name: alx-project-worker
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: celery -A alx_project worker --loglevel=info
+    startCommand: celery -A alx_project.celery_app worker --loglevel=info
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: alx_project.settings
@@ -36,7 +36,7 @@ services:
     name: alx-project-beat
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: celery -A alx_project beat --loglevel=info
+    startCommand: celery -A alx_project.celery_app beat --loglevel=info
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: alx_project.settings
